--- a/pkg/causalGel/vignettes/causalGel.Rnw
+++ b/pkg/causalGel/vignettes/causalGel.Rnw
@@ -50,6 +50,7 @@
 \newcommand{\ATE}{ATE\xspace}
 \newcommand{\ACE}{ACE\xspace}
 \newcommand{\ACT}{ACT\xspace}
+\newcommand{\ACC}{ACC\xspace}
 \newcommand{\ACN}{ACN\xspace}
 \newcommand{\PFC}{PFC\xspace}
 \newcommand{\CH}{CH\xspace}
@@ -207,7 +208,7 @@ setMethod("extract", "causalGelfit",
 
 \abstract{To be added}
 %\VignetteIndexEntry{Causal Inference with R}
-%\VignetteDepends{gmm4}
+%\VignetteDepends{momentfit}
 %\VignetteDepends{causalGel}
 %\VignetteKeywords{causal inference, empirical likelihood, GEL}
 %\VignettePackage{causalGel}
@@ -438,8 +439,8 @@ nsw$re78 <- nsw$re78/1000
 nsw$re75 <- nsw$re75/1000
 @ 
 
-The model class, is ``causalGel'' which inherits directly from
-``functionGel'' class. The constructor is the causalModel()
+The model class, is ``causalModel'' which inherits directly from
+``functionModel'' class. The constructor is the causalModel()
 function. The arguments are:
 
 \begin{itemize}
@@ -521,9 +522,9 @@ balm <- ~age+ed+black+hisp+re75
 The following are three different models:
 
 <<>>=
-ace <- causalModel(g, balm, nsw, momType="ACE", gelType="EL")
-act <- causalModel(g, balm, nsw, momType="ACT", gelType="EL")
-aceRT <- causalModel(g, balm, nsw, momType="uncondBal", gelType="EL")
+ace <- causalModel(g, balm, nsw, momType="ACE")
+act <- causalModel(g, balm, nsw, momType="ACT")
+aceRT <- causalModel(g, balm, nsw, momType="uncondBal")
 @ 
 
 The third one is the \ACE assuming randomized assignments. A print
@@ -544,11 +545,11 @@ formula. Here is an example:
 
 <<>>=
 balm2 <- ~age*ed+black+hisp+re75+I(re75^2)
-ace2 <- causalModel(g, balm2, nsw, momType="ACE", gelType="EL")
+ace2 <- causalModel(g, balm2, nsw, momType="ACE")
 print(ace2, printBalCov=TRUE)
 @ 
 
-\subsection{The \textit{modelFit} method and the ``causalGelfit'' object}\label{sec:causalfit}
+\subsection{The \textit{gelFit} method and the ``causalGelfit'' object}\label{sec:causalfit}
 
 It simply calls the method for ``functionGel'', and creates a
 ``causalGelfit'' class object. The simpliest way to use it is to only
@@ -556,7 +557,7 @@ provide the model object. The \textit{print} allows to show the
 $\lambdahat$ and model. 
 
 <<>>=
-fit1 <- modelFit(ace)
+fit1 <- gelFit(ace, gelType="EL") ## EL is the default
 print(fit1, model=FALSE, lambda=TRUE)
 @ 
 
@@ -628,7 +629,8 @@ $\mu(X)$, it is possible to use the method ``[`` to subset the
   and the second being the observations. Consider the following 
   
 <<>>=
-ace <- causalModel(re78~treat, ~(age+black+ed)*(age+black+ed) + I(age^2) + I(ed^2),
+ace <- causalModel(re78~treat, 
+                   ~(age+black+ed)*(age+black+ed) + I(age^2) + I(ed^2),
                    data=nsw)
 print(ace, TRUE)
 @   
@@ -645,7 +647,7 @@ Or remove interactions
 print(ace[1:5], TRUE)
 @ 
 
-We can use a subset by add a second argument:
+We can use a subset of the sample by adding a second argument:
 
 <<>>=
 print(ace[,1:100], TRUE)
@@ -656,7 +658,7 @@ An easy way to re-estimate a new model specified by ``[``, is to use
   the method for ``causalGelfit'' objects:
   
 <<>>=
-fit <- modelFit(ace)
+fit <- gelFit(ace)
 fit2 <- fit[,nsw$age<48]
 fit3 <- fit[1:3,1:500]
 @   
@@ -702,23 +704,64 @@ fit1 <- causalGEL(re78~treat, ~age+ed+black+hisp+re75, nsw, gelType="EL",
                  momType="uncondBal")
 @ 
 
-Similarly, the \ACE and \ACT can be computed as 
+Similarly, the \ACE, \ACT and \ACC can be computed as follows (The
+results are presented in Table \ref{t2}).
 
 <<>>=
 fit2 <- causalGEL(re78~treat, ~age+ed+black+hisp+re75, nsw, gelType="EL",
                   momType="ACE")
 fit3 <- causalGEL(re78~treat, ~age+ed+black+hisp+re75, nsw, gelType="EL",
                   momType="ACT")
+fit4 <- causalGEL(re78~treat, ~age+ed+black+hisp+re75, nsw, gelType="EL",
+                  momType="ACC")
 @ 
 
-The results are presented in Table \ref{t2}.
-
 <<echo=FALSE, results='asis'>>=
-texreg(list(fit1,fit2,fit3), digits=4, label="t2", 
-       custom.model.names=c("ACE(rand.)","ACE(non-random)", "ACT"),
+texreg(list(fit1,fit2,fit3,fit4), digits=4, label="t2", 
+       custom.model.names=c("ACE(rand.)","ACE(non-random)", "ACT", "ACC"),
        caption="Causal Effect for a Training Program", ci.force=TRUE,
        fontsize='footnotesize')
 @ 
+
+It is also possible to estimate restricted models, by passing
+restrictions to the arguments ``cstLHS'' and ``cstRHS''. There are two
+possible approaches. The first one is to define the restrictions in a
+vector of characters. In that case, ``cstRHS'' is set to its default
+value. For example, if we want to restrict the causal effect
+coefficient to be equal to 1, we proceed as:
+
+<<>>=
+causalGEL(re78~treat, ~age+ed+black+hisp+re75, nsw, gelType="EL",
+          momType="uncondBal", cstLHS="causalEffect=1")
+@ 
+
+If we want the above restriction plus the probability of being in the
+treatment group to be equal 0.5, we proceed this way. Notice that the
+restricted model only has one coefficient. To avoid complains coming
+from optim(), which warns you that Nelder-Mead is not reliable in
+one-dimensional optimization problems, we set the method to ``Brent''
+using the ``tControl'' argument:
+
+<<>>=
+causalGEL(re78~treat, ~age+ed+black+hisp+re75, nsw, gelType="EL",
+          momType="uncondBal", cstLHS=c("causalEffect=1", "probTreatment=0.5"),
+          tControl=list(method="Brent", lower=0, upper=10))
+@ 
+
+The problem with the above approach is that we need to know the names
+of the coefficients before calling causalGel(). For equallity
+constraints, we can instead set ``cstLHS'' to the coefficient
+positions, and ``cstRHS'' to their restricted values. The above two
+restricted models can therefore be obtained as follows:
+
+<<>>=
+causalGEL(re78~treat, ~age+ed+black+hisp+re75, nsw, gelType="EL",
+          momType="uncondBal", cstLHS=2, cstRHS=1)@theta
+causalGEL(re78~treat, ~age+ed+black+hisp+re75, nsw, gelType="EL",
+          momType="uncondBal", cstLHS=2:3, cstRHS=c(1,.5),
+          tControl=list(method="Brent", lower=0, upper=10))@theta
+@ 
+
 
 \bibliography{causal}
 
